--- a/src/Components/LoginForm/LoginForm.css
+++ b/src/Components/LoginForm/LoginForm.css
@@ -8,21 +8,21 @@ color: white;
     color: white;
 }
 
-.div-form-group {
-margin-bottom: 25px;
-}
-
-
 .modal-footer {
  background-color: #282c34;
  color: #282c34;
  height: 60px;
 }
 
+input {
+    margin-bottom: 8px;
+}
+
+
 .div-footer2 {
     margin-top: -2px;
     margin-bottom: 10px;
-    margin-right: 145px;
+    margin-right: 152px;
 }
 
 .div-footer1 {
@@ -36,6 +36,7 @@ margin-right: 8px;
     margin-bottom: 10px;
     margin-right: 5px;
 }
+
 
 
 
