--- a/src/Components/SignupForm/SignupForm.css
+++ b/src/Components/SignupForm/SignupForm.css
@@ -42,6 +42,11 @@
         height: -5px;
         width: 55px;
         margin-top: -7px;
-        margin-right: 220px;
+        margin-right: 230px;
         
+    }
+
+    .securitydet p {
+    margin-top: 15px;
+    margin-bottom:-15px;
     }
