--- a/src/Components/LoginForm/LoginForm.css
+++ b/src/Components/LoginForm/LoginForm.css
@@ -84,9 +84,13 @@ margin-bottom:5px;
     border-top: 0 none;
 }
 
+.remember-me-wrapper input {
+  margin-right: 5px;
+}
 
-
-
+label {
+  user-select: none;
+}
 
 
 
