--- a/src/Components/LandingPage/main.css
+++ b/src/Components/LandingPage/main.css
@@ -2,7 +2,7 @@
 
 .body {
     display: flex;
-    min-height: 100vh;
+    height: 80%;
     flex-direction: column;
     justify-content: flex-start;
     background-color: #CCC9DC;
@@ -31,7 +31,7 @@
 }
 
 .link {
-    color: #0C1821;
+    color: #8B1E3F;
 }
 
 .link:hover {
