--- a/src/Components/LandingPage/main.css
+++ b/src/Components/LandingPage/main.css
@@ -1,5 +1,4 @@
 
-
 .body {
     display: flex;
     height: 80%;
@@ -11,8 +10,7 @@
 }
 
 .innerBody {
-    border: solid #0C1821 3px;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,.25), 0 17px 50px 0 rgba(0,0,0,.25);
+    border: solid #0C1821 2px;
     padding: 50px;
     margin-left: auto;
     margin-right: auto;
@@ -28,6 +26,8 @@
 
 .navBar {
     background-color: #0C1821;
+    background-color: #8B1E3F;
+    border-bottom: solid #0C1821 3px;
 }
 
 .link {
@@ -45,7 +45,6 @@ h1 {
 input {
     background-color: white;
 }
-
 
 button:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,.25), 0 17px 50px 0 rgba(0,0,0,.25);
