--- a/src/Components/LandingPage/main.css
+++ b/src/Components/LandingPage/main.css
@@ -49,4 +49,10 @@ button:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,.25), 0 17px 50px 0 rgba(0,0,0,.25);
 }
 
+.buttPass {
+    background-color: #28B094 !important;
+    border: #28B094 !important;
+    color: #0C1821 !important;
+}
+
 
