--- a/src/Components/SignupForm/SignupForm.css
+++ b/src/Components/SignupForm/SignupForm.css
@@ -66,6 +66,6 @@ input {
 
 .buttModal {
     background-color: #28B094 !important;
-    border: #28B094;
+    border: #28B094 !important;
     color: #0C1821;
 }
