--- a/src/Components/LoginForm/LoginForm.css
+++ b/src/Components/LoginForm/LoginForm.css
@@ -47,6 +47,7 @@ body, html, .App, #root, .auth-wrapper {
 }
 .forgot-password,
 .forgot-password a {
+  text-decoration: none;
   text-align: center;
   font-size: 16px;
   padding-top: 5px;
@@ -77,7 +78,7 @@ body, html, .App, #root, .auth-wrapper {
 h3 {
 font-size: 35px;
 text-align: center;
-margin-bottom: 20px;
+margin-bottom: 35px;
 margin-top:3px;
 }
 
