Applied some more styling

--- a/src/Components/ViewGamePage/ViewGamePage.css
+++ b/src/Components/ViewGamePage/ViewGamePage.css
@@ -5,7 +5,12 @@
 .title {
     margin-bottom: 0px;
     padding-bottom: 0px;
-    font-size: 65px;
+    font-size: 60px;
+}
+
+.platform {
+    height: fit-content;
+    padding-top: 1%;
 }
 
 .year {
