--- a/src/Components/LandingPage/main.css
+++ b/src/Components/LandingPage/main.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: 86%;
+    height: auto;
+    min-height: 86%;
     background-color: #E0E0E0;
     color: #0C1821;
     padding: 20px;
+    max-width: 100%;
 }
 
 .innerBody {
@@ -83,6 +85,7 @@ button:hover {
 
 .aboutContainer {
     padding: 0 16px;
+    height: 200px;
 }
   
 .aboutContainer::after, .row::after {
@@ -98,5 +101,42 @@ button:hover {
 
 .cardText {
     color: #666666;
+    text-align: center;
 } 
+
+.bannerImg {
+    width: 100%;
+    height: 250px;
+}
+
+.pLanding {
+    margin-top: 40px;
+    color: #0C1821;
+    font-weight: bold;
+}
+
+.scroll > .row{
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+}
+
+.gamePic {
+    width: 325px;
+    height: 200px;
+}
+
+.aboutPic {
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+/* Uncomment this shit if you want to hide the scrollbar */
+/* ::-webkit-scrollbar {
+    /* width: 0;  /* Remove scrollbar space */
+    /* background: transparent;  /* Optional: just make scrollbar invisible */
+/* } */
+
   
