--- a/src/Components/ViewGamePage/ViewGamePage.css
+++ b/src/Components/ViewGamePage/ViewGamePage.css
@@ -6,11 +6,14 @@
     margin-bottom: 0px;
     padding-bottom: 0px;
     font-size: 60px;
+    font-size: 4vmax;
 }
 
 .platform {
     height: fit-content;
     padding-top: 1%;
+    font-size: 30px;
+    font-size: 2vmax;
 }
 
 .year {
@@ -18,16 +21,25 @@
     text-align: left;
     margin-bottom: 2px;
     margin-top: -5px;
-    font-size: 20px;
+    font-size: 30px;
+    font-size: 1.7vmax;
 }
 
-.rating_star {
-    font-size: 60px;
-    transform: scale(2,2);
-    margin: 0px;
-    width: 60px;
-    margin-left: 25px;
-    margin-bottom: 15px;
+.rating-star {
+    position: absolute;
+    z-index: 2;
+    font-size: 7vmax;
+    color: yellow;
+}
+
+.rating-star-border {
+    font-size: 7.5vmax;
+    color: black;
+}
+
+.image {
+    width: 30vmax;
+    object-fit: contain;
 }
 
 .reviews {
@@ -35,11 +47,19 @@
     background-color: lightgray;
 }
 
+.star-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .popularity {
     position: absolute;
-    width: auto;
     z-index: 2;
     font-size: 28px;
-    margin-left: 39px;
-    margin-top: 35px;
+    font-size: 2vmax;
+}
+
+.description {
+    font-size: 1.2vmax;
 }
