--- a/src/Components/ViewGamePage/ViewGamePage.css
+++ b/src/Components/ViewGamePage/ViewGamePage.css
@@ -45,6 +45,7 @@
 .reviews {
     margin: 10px;
     background-color: lightgray;
+    width: 60%;
 }
 
 .star-container {
@@ -62,4 +63,50 @@
 
 .description {
     font-size: 1.2vmax;
+}
+
+.price {
+    font-size: 1.3vmax;
+}
+
+.rtitle {
+    font-size: 2vmax;
+    padding-left: 1%;
+    color: #E0E0E0;
+}
+
+.other {
+    margin: 10px;
+    background-color: #E0E0E0;
+    height: fit-content;
+}
+
+.reviewButt {
+    width: fit-content;
+    padding: 3px 6px;
+    height: fit-content;
+}
+
+.otitle {
+    font-size: 1.5vmax;
+    padding: .25vmax 0px;
+    color: #E0E0E0;
+}
+
+.ostar {
+    font-size: 2vmax;
+}
+
+.ostar-border {
+    font-size: 2.5vmax;
+}
+
+.opop {
+    font-size: 0.5vmax;
+    font-weight: bold;
+}
+
+.ogame {
+    font-size: 1vmax;
+    color: #28B094;
 }
