--- a/src/Components/LandingPage/main.css
+++ b/src/Components/LandingPage/main.css
@@ -46,6 +46,7 @@
 h1 {
     padding-bottom: 20px;
     color: #0C1821;
+    text-align: center;
 }
 
 h2 {
@@ -87,7 +88,7 @@ button:hover {
 .aboutContainer {
     padding: 0 16px;
     height: 200px;
-    /* border-top: 2px solid #0C1821 !important; */
+    border-top: 1px solid #0C1821 !important;
 }
   
 .aboutContainer::after, .row::after {
@@ -109,10 +110,12 @@ button:hover {
 .bannerImg {
     width: 100%;
     height: 250px;
+    margin-bottom: -20px;
 }
 
 .pLanding {
     margin-top: 40px;
+    margin-bottom: 0px;
     color: #0C1821;
     font-weight: bold;
 }
@@ -121,6 +124,11 @@ button:hover {
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
+}
+
+.scroll > .row > .col {
+    padding: 10px;
+    
 }
 
 .gamePic {
@@ -137,6 +145,11 @@ button:hover {
     height: 500px;
     overflow: hidden;
     object-fit: cover;
+}
+
+.landingContent {
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 /* Uncomment this shit if you want to hide the scrollbar */
