--- a/src/Components/LandingPage/main.css
+++ b/src/Components/LandingPage/main.css
@@ -118,6 +118,7 @@ button:hover {
     margin-bottom: 0px;
     color: #0C1821;
     font-weight: bold;
+    font-size: 20px;
 }
 
 .scroll > .row {
