--- a/src/Components/LandingPage/main.css
+++ b/src/Components/LandingPage/main.css
@@ -15,9 +15,11 @@
     background-color: #282c34;
     color: #E0E0E0;
     padding: 50px;
+    margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: auto;
+    
 }
 
 .footer {
@@ -42,19 +44,20 @@
     color: #28B094;
 }
 
-
 h1 {
     padding-bottom: 20px;
     color: #0C1821;
     text-align: center;
 }
 
-h2 {
+.aboutContainer > h2 {
     padding-top: 10px;
     padding-bottom: 5px;
     text-align: center;
     color: #0C1821;
     font-size: 28px !important;
+    margin-left: 0;
+    margin-top: 0;
 }
 
 input {
@@ -119,6 +122,7 @@ button:hover {
     color: #0C1821;
     font-weight: bold;
     font-size: 20px;
+    text-align: left;
 }
 
 .scroll > .row {
@@ -157,6 +161,4 @@ button:hover {
 /* ::-webkit-scrollbar {
     /* width: 0;  /* Remove scrollbar space */
     /* background: transparent;  /* Optional: just make scrollbar invisible */
-/* } */
-
-  
+/* } */ 
