fixed the navbar

--- a/src/Components/LandingPage/main.css
+++ b/src/Components/LandingPage/main.css
@@ -31,9 +31,8 @@
     text-align: center;
 }
 
-.navBar {
-    background-color: #0C1821;
-    border-bottom: solid #0C1821 3px;
+.navbar {
+    background-color: #0C1821;    
 }
 
 .link {
