--- a/src/Components/LandingPage/main.css
+++ b/src/Components/LandingPage/main.css
@@ -135,8 +135,9 @@ button:hover {
 }
 
 .gamePic {
-    width: 325px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
+    object-fit: contain;
 }
 
 .gamePic:hover {
