--- a/src/Components/SearchPage/SearchPage.css
+++ b/src/Components/SearchPage/SearchPage.css
@@ -161,7 +161,7 @@ margin-right: 25px;
     font-weight: bold;
     font-size: 35px;
     margin-bottom: 25px;
-    text-align: left;
+    margin-left: 25px;
 }
 
 .search-scroll {
