--- a/src/Components/CreateReviewPage/CreateReviewPage.css
+++ b/src/Components/CreateReviewPage/CreateReviewPage.css
@@ -69,7 +69,8 @@ input[type="radio"] {
 
 .section-format {
     margin-top: -25px;
-    margin-left: 615px;
+    margin: auto;
+    width: 45%;
 }
 
 .form-group2 label {
