--- a/src/Components/SearchPage/SearchPage.css
+++ b/src/Components/SearchPage/SearchPage.css
@@ -123,6 +123,18 @@ h2 {
     width: 128px !important;
 }
 
+.custom2 {
+    width: 128px !important;
+    background-color: #28B094 !important;
+    color: #0C1821 !important;
+}
+
+.custom2:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,.25), 0 17px 50px 0 rgba(0,0,0,.25) !important;
+    background-color: #28B094 !important;
+    color: #0C1821 !important;
+}
+
 .grid-container {
     text-align:left;
     margin-top: 65px;
