re fixed styling

--- a/src/Components/CreateReviewPage/CreateReviewPage.css
+++ b/src/Components/CreateReviewPage/CreateReviewPage.css
@@ -69,8 +69,7 @@ input[type="radio"] {
 
 .section-format {
     margin-top: -25px;
-    margin: auto;
-    width: 45%;
+    margin-left: 485px;
 }
 
 .form-group2 label {
