--- a/src/Components/SearchPage/SearchPage.css
+++ b/src/Components/SearchPage/SearchPage.css
@@ -99,7 +99,7 @@ h2 {
 }
 
 .console-filter Button:hover {
-    background-color: #28B094;
+    background-color: #E9AD20;
     border-color: black;
     color: #0C1821;
 } 
@@ -111,7 +111,7 @@ h2 {
 } 
 
 .console-filter Button:focus {
-    background-color: #28B094;
+    background-color: #E9AD20;
     border-color:#0C1821;
     outline: none;
     color: #0C1821;
@@ -181,12 +181,12 @@ margin-right: 25px;
 .custom2 {
     width: 128px !important;
     background-color: #28B094 !important;
-    color: #0C1821 !important;
+    color: #E0E0E0 !important;
 }
 
 .custom2:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,.25), 0 17px 50px 0 rgba(0,0,0,.25) !important;
-    background-color: #28B094 !important;
-    color: #0C1821 !important;
+    background-color: #E9AD20  !important;
+    color: #E0E0E0 !important;
 }
 
